--- a/style.css
+++ b/style.css
@@ -107,3 +107,39 @@ html{
   background-color: #4253af;
   color: white;
 }
+
+/* Área dos logs */
+
+.log ul{
+  display: 	flex;
+  flex-direction: column;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.log ul li {
+  display: flex;
+  justify-content: center;
+  margin: 4px 0px;
+  padding: 3px 0px;
+  font-weight: 600;
+  font-size: 1.1rem;
+  text-transform: uppercase	;
+  border-radius: 3px;
+}
+
+.player {
+  background-color: #4253afaa;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+
+.monster{
+  background-color: #e51c23aa;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
